# GCodeCorrector

./: .gitignore  .gitmodules  3rdparty.xml  CMakeLists.txt  GCodeCorrector.sln  LICENSE  README.md  gen-gcodecorrector.cmd  gen-gcodecorrector_install.cmd
GCodeCorrector/: App.config  App.xaml  App.xaml.cs  CMakeLists.txt  GCodeCorrector.csproj  MainWindow.xaml  MainWindow.xaml.cs  packages.config
GCodeCorrector/Behaviors/: ContextMenuFixer.cs
GCodeCorrector/Infrastructure/: GCodeCorrectorApp.cs  LocalizationModule.cs  MainMenuItems.cs  MainModule.cs  MenuWithSubItems.cs  PerMonitorDpiWindow.cs  PlatformVariables.cs
GCodeCorrector/Models/: GCodeLine.cs  State.cs
GCodeCorrector/Properties/: AssemblyInfo.cs  AssemblyVersionInfo.Generated.cs.in  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
GCodeCorrector/Resources/: LocalizableResources.Designer.cs  LocalizableResources.resx
GCodeCorrector/Shaders/: DisabledEffect.cs  DisabledEffect.fx  DisabledEffect.ps
GCodeCorrector/Themes/: Common.xaml  ContextMenuStyle.xaml
GCodeCorrector/ViewModels/: MainViewModel.cs
GCodeCorrector/Views/: MainView.xaml  MainView.xaml.cs
install/: CMakeLists.txt  bootstrapper.nsi  bootstrapper_GCodeCorrector_en_US.nsh  bootstrapper_GCodeCorrector_ru_RU.nsh  bootstrapper_en_US.nsh  bootstrapper_ru_RU.nsh
